--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "private": false,
-  "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-concat": "~2.5.2",
-    "gulp-minify-css": "^0.4.3",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rename": "~1.2.0",
-    "gulp-sass": "^2.1.0",
-    "gulp-util": "^3.0.3"
-  }
+	"private": false,
+	"devDependencies": {
+		"gulp": "^3.9.0",
+		"gulp-autoprefixer": "^3.1.0",
+		"gulp-combine-mq": "^0.4.0",
+		"gulp-csscomb": "^3.0.6",
+		"gulp-csso": "^1.0.1",
+		"gulp-load-plugins": "^1.1.0",
+		"gulp-minify-css": "^1.2.2",
+		"gulp-notify": "^2.2.0",
+		"gulp-plumber": "^1.0.1",
+		"gulp-rename": "~1.2.2",
+		"gulp-sass": "^2.1.1",
+		"gulp-sourcemaps": "^1.6.0",
+		"gulp-util": "^3.0.7"
+	}
 }
