--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-	"private": false,
-	"devDependencies": {
-		"gulp": "^3.9.0",
-		"gulp-autoprefixer": "^3.1.0",
-		"gulp-combine-mq": "^0.4.0",
-		"gulp-csscomb": "^3.0.6",
-		"gulp-csso": "^1.0.1",
-		"gulp-load-plugins": "^1.1.0",
-		"gulp-minify-css": "^1.2.2",
-		"gulp-notify": "^2.2.0",
-		"gulp-plumber": "^1.0.1",
-		"gulp-rename": "~1.2.2",
-		"gulp-sass": "^2.1.1",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-util": "^3.0.7"
-	}
+  "private": false,
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-combine-mq": "^0.4.0",
+    "gulp-csscomb": "^3.0.6",
+    "gulp-csso": "^1.0.1",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "~1.2.2",
+    "gulp-sass": "^2.1.1",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7"
+  }
 }
