using node instead of gulp to compile sass

--- a/package.json
+++ b/package.json
@@ -30,23 +30,11 @@
   ],
   "private": false,
   "devDependencies": {
-    "autoprefixer": "^6.3.5",
-    "css-mqpacker": "^4.0.1",
-    "csscomb": "^3.1.8",
-    "cssnano": "^3.5.2",
-    "gulp": "^3.9.0",
-    "gulp-combine-mq": "^0.4.0",
-    "gulp-csscomb": "^3.0.6",
-    "gulp-csso": "^1.0.1",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-minify-css": "^1.2.2",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^6.1.0",
-    "gulp-rename": "~1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-util": "^3.0.7"
+    "node-sass": "4",
+    "nodemon": "1"
+  },
+  "scripts":{
+    "build": "node-sass --include-path scss src/sierra.scss dist/sierra.min.css  --output-style compressed",
+    "watch": "nodemon -e scss -x \"npm run build\""
   }
 }
