--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sierra-library",
-  "version": "3.0.0-b",
+  "version": "3.0.0",
   "description": "The smallest and lightest scss library",
   "main": "lib/index.scss",
   "repository": {
