--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sierra-library",
-  "version": "3.0.11",
+  "version": "3.0.11-development",
   "description": "The smallest and lightest scss library",
   "main": "lib/index.scss",
   "repository": {
@@ -39,7 +39,9 @@
     "husky": "1",
     "node-sass": "4",
     "nodemon": "1",
-    "postcss-cli": "2"
+    "postcss-cli": "2",
+    "travis-deploy-once": "5",
+    "semantic-release": "15"
   },
   "browserslist": [
     "> 1%",
@@ -50,7 +52,9 @@
     "build:prod": "node-sass --include-path scss src/index.scss dist/sierra.min.css  --output-style compressed && postcss --use autoprefixer dist/sierra.min.css -d dist/",
     "build:dev": "node-sass --include-path scss src/index.scss dist/sierra.css && postcss --use autoprefixer dist/sierra.css -d dist/",
     "co": "git cz",
-    "watch": "nodemon -e scss -x \"npm run build\""
+    "watch": "nodemon -e scss -x \"npm run build\"",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "config": {
     "commitizen": {
